--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 (window.vaq = window.vaq || []).push(arguments);
             };
     </script>
-    <script defer src="script.js"></script>
+    <script defer src="https://doom-captcha.vercel.app/_vercel/insights/script.js"></script>
     <script>
         // Handle taps outside the canvas container
         document.addEventListener("touchstart", (e) => {
