Update (Trying Load Map)

--- a/index.html
+++ b/index.html
@@ -758,6 +758,8 @@
                 "-nomenu",
                 "-skill",
                 "2",
+                "-file",
+                "volta1.wad",
                 "-warp",
                 "VOLTA01",
             ],
