Convert Shareware WAD

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                 "-skill",
                 "2",
                 "-file",
-                "volta1.wad",
+                "./volta1.wad",
                 "-warp",
                 "VOLTA01",
             ],
