--- a/index.html
+++ b/index.html
@@ -754,12 +754,14 @@
         var Module = {
             keyboardListeningElement: captchaContainer,
             arguments: [
+                "-iwad",
+                "doom.wad",
                 "-autoreborn",
                 "-nomenu",
                 "-skill",
                 "2",
                 "-file",
-                "./volta1.wad",
+                "volta1.wad",
                 "-warp",
                 "VOLTA01",
             ],
