Update/Load Custom Map

--- a/index.html
+++ b/index.html
@@ -758,9 +758,8 @@
                 "-nomenu",
                 "-skill",
                 "2",
-                "-warp",
-                "1",
-                "9",
+                "-wart",
+                "1"
             ],
             preRun: [
                 function () {
