--- a/index.html
+++ b/index.html
@@ -758,6 +758,8 @@
                 "-nomenu",
                 "-skill",
                 "2",
+                "-file",
+                "./devmapsE1M1.wad",
                 "-wart",
                 "1",
                 "1"
