Update/Try Fix 4

--- a/index.html
+++ b/index.html
@@ -757,8 +757,10 @@
                 "-autoreborn",
                 "-nomenu",
                 "-skill",
-                "2",
-                "-wart",
+                "1",
+                "-file",
+                "volta_doom.wad",
+                "-warp",
                 "1",
                 "1"
             ],
