--- a/index.html
+++ b/index.html
@@ -758,9 +758,8 @@
                 "-nomenu",
                 "-skill",
                 "1",
-                "-warp",
-                "1",
-                "9"
+                "-file",
+                "volta_doom.wad",
             ],
             preRun: [
                 function () {
