Update/Try Fix 10

--- a/index.html
+++ b/index.html
@@ -758,9 +758,11 @@
                 "-nomenu",
                 "-skill",
                 "1",
-                "-warp",
+                "-file",
+                "volta_doom.wad",
+                "-wart",
                 "1",
-                "9"
+                "1"
             ],
             preRun: [
                 function () {
